--- a/assets/style.css
+++ b/assets/style.css
@@ -22,10 +22,12 @@ button {
 input {
     background-color: white;
 }
-div {
+
+#container div {
     border: 1px solid #aaa;
+    padding: 20px;
+    margin-top: 20px;
     margin-bottom: 20px;
-    padding: 0px 20px;
     font-size: 16px;
 }
 
@@ -63,4 +65,9 @@ div {
     background-color: #e3ffdd;
     border-color: green;
     color: green;
+}
+
+div#countdown {
+max-width: 300px;
+border: 0;
 }
