--- a/assets/styles/layout.less
+++ b/assets/styles/layout.less
@@ -1,8 +1,8 @@
 html, body, .content-wrapper {
   width: 100%;
   height: 100%;
-  overflow: hidden;
-  position: relative
+  position: relative;
+  // overflow: hidden; TODO: wtf why does this do this?
 }
 
 .content-wrapper {
