--- a/assets/styles/index.less
+++ b/assets/styles/index.less
@@ -14,3 +14,5 @@
 @import './components/row.less';
 @import './components/side-menu.less';
 @import './components/top-bar.less';
+
+@import 'overrides.less';
