mobile friendly style changes

--- a/front/assets/styles/components/top-bar.less
+++ b/front/assets/styles/components/top-bar.less
@@ -7,6 +7,12 @@
   background: white;
   border-bottom: 1px solid @grey-border;
 
+  #top-bar-header {
+    font-size: @font-size-large;
+    color: @red;
+    margin: 0;
+  }
+
   .side-menu-toggle {
     padding-left: 12px;
     transition: left 0.3s ease;
@@ -17,6 +23,6 @@
   }
 
   .socketStatusIndicator {
-    padding-right: 5px;
+    margin-right: 12px;
   }
 }
