style user list

--- a/front/assets/styles/index.less
+++ b/front/assets/styles/index.less
@@ -10,6 +10,7 @@
 @import 'links.less';
 @import 'slideout.less';
 @import 'hamburgers.less';
+@import 'content.less';
 
 @import './components/row.less';
 @import './components/side-menu.less';
