stub for an entry dialog for groups

--- a/front/assets/styles/variables.less
+++ b/front/assets/styles/variables.less
@@ -3,6 +3,7 @@
 
 @grey-light: #777;
 @grey-x-light: #999;
+@grey-xx-light: #BBB;
 @grey-xxx-light: rgb(244, 244, 244);
 @grey-xxxx-light: rgb(250, 250, 250);
 @grey-border: rgba(160, 160, 160, 0.298039);
