convert dialog to modal

--- a/front/assets/styles/utils.less
+++ b/front/assets/styles/utils.less
@@ -7,3 +7,15 @@
   visibility: visible;
   display: block;
 }
+
+.center {
+  text-align: center;
+}
+
+.underline {
+  text-decoration: underline;
+}
+
+.italic {
+  font-style: italic;
+}
