--- a/front/assets/styles/layout.less
+++ b/front/assets/styles/layout.less
@@ -9,6 +9,7 @@ html, body, .content-wrapper {
   display: flex;
   position: relative;
   flex-direction: column;
+  box-shadow: 11px 0px 15px 5px;
 
   .top-bar {
     flex: 0 0 auto;
