--- a/front/assets/styles/layout.less
+++ b/front/assets/styles/layout.less
@@ -7,6 +7,7 @@ html, body, .content-wrapper {
 
 .content-wrapper {
   display: flex;
+  height: 100vh;
   position: relative;
   flex-direction: column;
   box-shadow: 11px 0px 15px 5px;
