move tomato styles into less

--- a/front/assets/styles/tomato.less
+++ b/front/assets/styles/tomato.less
@@ -49,8 +49,8 @@ div.progressbar-text {
   z-index: -1;
 }
 .red #tomatoImage::after {
-  background-image: url('images/tomato-red.png');
+  background-image: url('../images/tomato-red.png');
 }
 .green #tomatoImage::after {
-  background-image: url('images/tomato-green.png');
+  background-image: url('../images/tomato-green.png');
 }
