--- a/front/assets/styles/index.less
+++ b/front/assets/styles/index.less
@@ -12,6 +12,7 @@
 @import 'hamburgers.less';
 @import 'modals.less';
 @import 'content.less';
+@import 'tomato.less';
 
 @import './components/row.less';
 @import './components/side-menu.less';
