push session link to bottom of viewport

--- a/front/assets/styles/layout.less
+++ b/front/assets/styles/layout.less
@@ -18,6 +18,8 @@ html, body, .content-wrapper {
   }
 
   .content {
+    display: flex;
+    flex-direction: column;
     flex: 1;
     overflow-y: auto;
     -webkit-overflow-scrolling: touch;
