--- a/front/assets/styles/variables.less
+++ b/front/assets/styles/variables.less
@@ -1,10 +1,11 @@
 @red: #ED6A5A;
 @blue: #0FA0CE;
+@white: #FFFFFF;
 
 @grey-light: #777;
 @grey-x-light: #999;
 @grey-xx-light: #BBB;
-@grey-xxx-light: rgb(244, 244, 244);
+@grey-xxx-light: #EEE;
 @grey-xxxx-light: rgb(250, 250, 250);
 @grey-border: rgba(160, 160, 160, 0.298039);
 
