show developer comment box

--- a/front/assets/styles/components/side-menu.less
+++ b/front/assets/styles/components/side-menu.less
@@ -2,7 +2,9 @@
   padding: 30px;
   background: @red;
 
-  text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.5);
+  h1, h2, h3, label {
+    text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.5);
+  }
   button {
     background-color: @white;
   }
