--- a/front/assets/styles/slideout.less
+++ b/front/assets/styles/slideout.less
@@ -6,7 +6,7 @@ body {
 .side-menu-ad {
   background: rgba(255,255,255, 0.4);
   height: 140px;
-  margin-top: 60px;
+  margin-top: auto;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
