--- a/front/assets/styles/slideout.less
+++ b/front/assets/styles/slideout.less
@@ -10,28 +10,32 @@ body {
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
-}
-.side-menu-ad img {
-  height: 100%;
-  padding: 5px;
-  -webkit-border-radius: 8px;
-  -moz-border-radius: 8px;
-  border-radius: 8px;
-  float: left;
+
+  img {
+    height: 100%;
+    padding: 5px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    border-radius: 8px;
+    float: left;
+  }
+
+  .side-menu-ad-text {
+    font-size: 13px;
+    padding-left: 5px;
+    padding-top: 5px;
+    float: left;
+    width: 95px;
+
+    & > p {
+      color: #666;
+      margin-bottom: 14px;
+    }
+  }
 }
 
-.side-menu-ad .side-menu-ad-text {
-  font-size: 13px;
-  padding-left: 5px;
-  padding-top: 5px;
-  float: left;
-  width: 95px;
-}
 
-.side-menu-ad .side-menu-ad-text > p {
-  color: #666;
-  margin-bottom: 14px;
-}
+
 
 .slideout-menu {
   position: fixed;
