--- a/front/assets/styles/components/side-menu.less
+++ b/front/assets/styles/components/side-menu.less
@@ -53,3 +53,33 @@
     letter-spacing: 0.15em;
   }
 }
+.side-menu-ad {
+  background: rgba(255,255,255, 0.4);
+  height: 140px;
+  margin-top: auto;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+
+  img {
+    height: 100%;
+    padding: 5px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    border-radius: 8px;
+    float: left;
+  }
+
+  .side-menu-ad-text {
+    font-size: 13px;
+    padding-left: 5px;
+    padding-top: 5px;
+    float: left;
+    width: 95px;
+
+    & > p {
+      color: #666;
+      margin-bottom: 14px;
+    }
+  }
+}
