Added button to close modals

--- a/front/assets/styles/modals.less
+++ b/front/assets/styles/modals.less
@@ -3,6 +3,7 @@
 
   .modal-header {
     text-align: center;
+    position: relative;
 
     h3 {
       font-size: 1.05rem;
@@ -12,7 +13,12 @@
     }
 
   }
-  .modal-content {
-  }
 
+  i.close-modal {
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    right: 0;
+    color: @red;
+  }
 }
